# arnold-usd

./: .gitignore  CMakeLists.txt  package.py
cmake/modules/: FindUSD.cmake
cmake/utils/: options.cmake
render_delegate/: render_delegate.cpp
schemas/: CMakeLists.txt  createSchemaFile.py
translator/: CMakeLists.txt
